updated project and research pages

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -65,55 +65,37 @@
         
         <div class="page-content">
             <h2 id="digital-history-projects">Digital History Projects</h2>
-<h3 id="project-1-project-name">Project 1: [Project Name]</h3>
-<p><strong>Status:</strong> Completed/In Progress<br>
-<strong>Technologies:</strong> List of technologies used<br>
-<strong>Description:</strong> Detailed description of the project, its goals, and outcomes.</p>
+<h3 id="project-1-antebellum-divorce-in-the-american-south">Project 1: Antebellum Divorce in the American South</h3>
+<p><strong>Status:</strong> In Progress<br>
+<strong>Methods:</strong> SQLite3, Shiny, Tesseract OCR with OpenAI&rsquo;s API correction, overlaying shapefiles<br>
+<strong>Description:</strong> Analyze divorce petitions filed in North Carolina, Alabama, and Tennessee from 1800 to 1860. A work of gender and legal history.</p>
 <p><strong>Key Features:</strong></p>
 <ul>
-<li>Feature 1</li>
-<li>Feature 2</li>
-<li>Feature 3</li>
+<li>Interactive Database in Shiny</li>
 </ul>
 <p><strong>Links:</strong></p>
 <ul>
 <li><a href="link">GitHub Repository</a></li>
-<li><a href="link">Live Demo</a></li>
-<li><a href="link">Documentation</a></li>
 </ul>
 <hr>
-<h3 id="project-2-project-name">Project 2: [Project Name]</h3>
-<p><strong>Status:</strong> Completed/In Progress<br>
-<strong>Technologies:</strong> List of technologies used<br>
-<strong>Description:</strong> Detailed description of the project, its goals, and outcomes.</p>
-<p><strong>Key Features:</strong></p>
-<ul>
-<li>Feature 1</li>
-<li>Feature 2</li>
-<li>Feature 3</li>
-</ul>
+<h3 id="project-2-ocring-deed-books">Project 2: OCRing Deed Books</h3>
+<p><strong>Status:</strong> In Progress<br>
+<strong>Tools:</strong> AI Vision-Based OCR<br>
+<strong>Description:</strong> Utilized AI Vision to transcribe hand written deed documents found in Pickens County Deed Books. These records date back to the 19th century.</p>
 <p><strong>Links:</strong></p>
 <ul>
-<li><a href="link">GitHub Repository</a></li>
-<li><a href="link">Live Demo</a></li>
-<li><a href="link">Documentation</a></li>
+<li><a href="https://digitalcollections.clemson.edu/explore/collections/deeds-unbound/">Digital Collections</a></li>
+<li><a href="https://github.com/EaHorton/deeds_transcriptions">GitHub Repository</a></li>
 </ul>
 <hr>
-<h3 id="project-3-project-name">Project 3: [Project Name]</h3>
-<p><strong>Status:</strong> Completed/In Progress<br>
-<strong>Technologies:</strong> List of technologies used<br>
-<strong>Description:</strong> Detailed description of the project, its goals, and outcomes.</p>
-<p><strong>Key Features:</strong></p>
-<ul>
-<li>Feature 1</li>
-<li>Feature 2</li>
-<li>Feature 3</li>
-</ul>
+<h3 id="project-3-civil-war-diaries">Project 3: Civil War Diaries</h3>
+<p><strong>Status:</strong> Completed<br>
+<strong>Methods:</strong> Word Vectors, Topic Modeling<br>
+<strong>Description:</strong> Analyzed the Civil War diaries of 15 Southern women.</p>
 <p><strong>Links:</strong></p>
 <ul>
-<li><a href="link">GitHub Repository</a></li>
-<li><a href="link">Live Demo</a></li>
-<li><a href="link">Documentation</a></li>
+<li><a href="https://github.com/EaHorton/Civil_War_Diaries">GitHub Repository</a></li>
+<li><a href="https://github.com/EaHorton/Civil_War_Diaries/blob/main/Delicate_Flowers_Vignette.qmd">Vignette</a></li>
 </ul>
 <h2 id="just-for-fun">Just for Fun</h2>
 <h3 id="project-1-boxer-lawn-and-landscape-website">Project 1: Boxer Lawn and Landscape Website</h3>
